feat: rewrite bank transaction import logic (#123)
* feat: rewrite bank transaction import logic

* feat: rewrite bank transaction import logic

* feat: rewrite bank transaction import logic

* refactor: delete map to json converter class

* refactor: code style

* test: update for bank transaction refactor

* refactor: remove unused findAllDatas function

* test: extend csv parser coverage

* test: improve csv parser coverage

* test: expand CSV parser coverage

* test: expand BankCsvImportService scenarios

* test: cover ImmutablePairUtils zipStream

* test: cover BankCsvParser static parsing edge

* test: cover BankTransactionMapper error branches